<resources>
    <string name="app_name">Municipalidad del Callao</string>
    <string name="app_email">municipality.callao@gob.pe</string>

    <!-- menu principal -->
    <string name="app_edit_data">Editar datos</string>
    <string name="app_create_dec">Crear declaración</string>
    <string name="app_my_car">Mis autos</string>
    <string name="app_more_option">Mas opciones</string>
    <string name="app_share">Compartir</string>
    <string name="app_manual">Manual de Uso</string>
    <string name="app_change_password">Cambiar clave</string>
    <string name="app_exit">Salir</string>
    <string name="title_activity_detalle_carro">Detalle de Vehiculo</string>
    <string name="title_activity_listado_declaraciones">Listado de Declaraciones</string>
    <string name="title_activity_detalle_declaracion">Detalle de Declaracion</string>
    <string name="title_activity_estado_cuenta">Estado Cuenta</string>

    <!-- login -->
    <string name="app_txt_usuario">Usuario</string>
    <string name="app_txt_clave">Clave</string>
    <string name="app_btn_login">Iniciar sesión</string>
    <string name="app_btn_regitrarse">Registrarse</string>
    <string name="app_btn_exit">Salir</string>
    <!-- registro usuario -->
    <string name="app_reg_txt_usuario">Registro de Usuario</string>
    <string name="app_reg_documento">DNI</string>
    <string name="app_reg_nombre">Nombre</string>
    <string name="app_reg_ape_paterno">Apellido paterno</string>
    <string name="app_reg_ape_materno">Apellido materno</string>
    <string name="app_reg_distrito">Distrito</string>
    <string name="app_reg_direccion">Direccion</string>
    <string name="app_reg_correo">Correo</string>
    <string name="app_reg_telefono">Telefono</string>
    <string name="app_reg_clave">Clave</string>
    <!-- Editar datos -->
    <string name="app_btn_editar">Editar</string>
    <string name="app_btn_regresar">Regresar</string>
    <!-- Reset password -->
    <string name="app_btn_new_password">Nueva clave</string>
    <string name="app_btn_clave_antigua">Clave antigua</string>
    <string name="app_btn_repeat_clave">Repetir clave</string>
    <!-- Declaracion jurada -->
    <string name="app_title_declaracion">Declaracion jurada</string>
    <string name="app_declaracion_dni">DNI</string>
    <string name="app_declaracion_placa">Placa</string>
    <string name="app_declaracion_porcentaje">Porcentaje</string>
    <string name="app_declaracion_impuesto">Impuesto</string>
    <string name="app_declaracion_fecha">Fecha declaración</string>
    <string name="app_declaracion_afecto_desde">Afecto desde</string>
    <string name="app_declaracion_anio_adquicion">Año adquisición</string>
    <string name="app_declaracion_moneda">Moneda</string>
    <string name="app_declaracion_valor_adquisicion">Valor adquisición</string>
    <string name="app_declaracion_tipo_cambio">Tipo cambio</string>
    <string name="app_declaracion_val_real_adq">Valor real de adquisición</string>
    <string name="app_declaracion_val_mef">Valor del mef</string>
    <string name="app_declaracion_btn">Declarar</string>
    <!-- Detalle de carro -->
    <string name="app_btn_estado_cuenta">Estado de cuenta</string>
    <string name="app_btn_lst_declaracion">Listado de declaraciones</string>
    <string name="app_txt_anio">Año</string>
    <string name="app_txt_categoria">Categoría</string>
    <string name="app_txt_modelo">Modelo</string>
    <string name="app_txt_marca">Marca</string>
    <string name="app_txt_placa">Placa</string>
    <!-- Detalle de mi declaracion -->
    <string name="app_title_mi_declaracion">Mi declaración</string>
    <string name="app_txt_carro">Carro</string>
    <string name="app_txt_base_imponible">Base imponible</string>
    <!-- estado de cuenta -->
    <string name="app_txt_recibo">Recibo</string>
    <string name="app_txt_interes">Interes</string>
    <string name="app_txt_fecha_pago">Fecha de pago</string>
    <string name="app_txt_deuda">Deuda</string>
    <!-- mensajes de validacion del registro usuario -->
    <string name="app_msg_dni_vacio">Ingrese su DNI.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placa1">NMB-000</string>
    <string name="placa2">EBU-654</string>
    <string name="placa3">YHB-357</string>
    <string name="placa4">ZYW-369</string>
    <string name="placa5">GFH-741</string>
    <string name="placa6">DEF-258</string>
    <string name="placa7">ABC-123</string>
    <string name="marca1">Toyota</string>
    <string name="marca2">Nissan</string>
    <string name="marca3">Volvo</string>
    <string name="marca4">Zuzuki</string>
    <string name="marca5">Ferrari</string>
    <string name="marca6">Honda</string>
    <string name="marca7">Daewo</string>
    <string name="modelo1">Modelo 1</string>
    <string name="modelo2">Modelo 2</string>
    <string name="modelo3">Modelo 3</string>
    <string name="modelo4">Modelo 4</string>
    <string name="modelo5">Modelo 5</string>
    <string name="modelo6">Modelo 6</string>
    <string name="modelo7">Modelo 7</string>
    <string name="cat1">A1</string>
    <string name="cat2">A2</string>
    <string name="cat3">A1</string>
    <string name="cat4">A3</string>
    <string name="cat5">A3</string>
    <string name="cat6">A1</string>
    <string name="cat7">A2</string>


    <string name="year1">2015</string>
    <string name="year2">2013</string>
    <string name="year3">2014</string>
    <string name="year4">2016</string>
    <string name="year5">2009</string>
    <string name="year6">2010</string>
    <string name="year7">2014</string>
    <string name="usuario1">Renso Valencia</string>
    <string name="carro1">Toyota Caldina, Categoria A1, placa: ABC-258</string>
    <string name="anio1">2011</string>
    <string name="porcentaje1">01</string>
    <string name="baseImponible1">8500</string>
    <string name="impuesto1">0.18</string>
    <string name="fechaDeclaracion1">01/01/2015</string>
    <string name="afectoDesde1">01/01/2016</string>
    <string name="anioAdquisicion1">2014</string>
    <string name="tipoMoneda1">Soles</string>
    <string name="valorAdquisicion1">25.52</string>
    <string name="tipoCambio1">25.52</string>
    <string name="valorRealAdquisicion1">25.52</string>
    <string name="valorMef1">23.20</string>
</resources>
