<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.upc.municipalidadcallao.activity.DetalleDeclaracionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="pe.edu.upc.municipalidadcallao.activity.DetalleDeclaracionActivity"
        tools:showIn="@layout/activity_detalle_declaracion">

        <android.support.v7.widget.CardView
            android:layout_width="368dp"
            android:layout_height="495dp"
            android:layout_margin="1dp"
            app:cardCornerRadius="4dp"
            android:id="@+id/declaracionCardView"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_title_mi_declaracion"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorRojo"
                        android:layout_gravity="center"
                        />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:src="@drawable/declaracion"
                        android:id="@+id/pictureImageView"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="15dp"
                                android:textColor="@color/colorAzul"
                                android:text="@string/app_txt_carro"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/carro1"
                                android:textStyle="bold"
                                android:textSize="18dp"
                                android:id="@+id/tvCarro"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="15dp"
                                android:textColor="#0000FF"
                                android:text="@string/app_txt_usuario"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/usuario1"
                                android:textStyle="bold"
                                android:textSize="18dp"
                                android:id="@+id/tvUsuario"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="15dp"
                                android:textColor="#0000FF"
                                android:text="@string/app_declaracion_porcentaje"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/porcentaje1"
                                android:textStyle="bold"
                                android:id="@+id/tvPorcentaje"/>

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="15dp"
                                android:textColor="#0000FF"
                                android:text="@string/app_txt_base_imponible"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/baseImponible1"
                                android:textStyle="bold"
                                android:id="@+id/tvBaseImponible"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="15dp"
                                android:textColor="@color/colorAzul"
                                android:text="@string/app_declaracion_impuesto"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/impuesto1"
                                android:id="@+id/tvImpuesto"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="15dp"
                                android:textColor="@color/colorAzul"
                                android:text="@string/app_declaracion_fecha"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/fechaDeclaracion1"
                                android:id="@+id/tvFechaDeclaracion"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="15dp"
                                android:textColor="@color/colorAzul"
                                android:text="@string/app_declaracion_afecto_desde"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/afectoDesde1"
                                android:id="@+id/tvAfectoDesde"/>
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/btnRegresar"
                        android:drawableLeft="@drawable/ic_menu_reply_black"
                        android:text="@string/app_btn_regresar"/>

                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>